update SchemaOss and update license field for each oss yaml file

--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Performs operating-system-level virtualization also known as containerization"
   fr: "Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation"
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://www.docker.com"
   fr: "https://www.docker.com"
 licenses: 
-  - Apache-2.0
+  - 
+    URL: 
+      en: "https://www.docker.com/legal/components-licenses"
+      fr: "https://www.docker.com/legal/components-licenses"
+    spdxID: "Apache-2.0"
 name: 
   en: "Docker"
   fr: "Docker"
