--- a/_data/logiciels_libres-open_source_software/elasticsearch.yml
+++ b/_data/logiciels_libres-open_source_software/elasticsearch.yml
@@ -1,4 +1,5 @@
 ---
+schemaVersion: "1.0"
 description: 
   en: "Elasticsearch is a distributed, RESTful search and analytics engine capable of solving a growing number of use cases."
   fr: "Elasticsearch est un moteur de recherche et d'analyse RESTful distribué, conçu pour répondre à une multitude de cas d'utilisation."
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://www.elastic.co/products/elasticsearch"
   fr: "https://www.elastic.co/fr/products/elasticsearch"
 licenses: 
-  - Apache-2.0
+  - 
+    URL: 
+      en: "https://www.elastic.co/guide/en/elasticsearch/hadoop/current/license.html"
+      fr: "https://www.elastic.co/guide/en/elasticsearch/hadoop/current/license.html"
+    spdxID: "Apache-2.0"
 name: 
   en: Elasticsearch
   fr: Elasticsearch
