--- a/_data/logiciels_libres-open_source_software/lesk.yml
+++ b/_data/logiciels_libres-open_source_software/lesk.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Laravel Enterprise Starter Kit, is a template project based on the Laravel framework, combining a set of features that can kick start any Web application."
   fr: "Laravel Enterprise Starter Kit, est un projet de modèle basé sur le framework Laravel, combinant un ensemble de fonctionnalités qui peuvent démarrer n'importe quelle application Web."
@@ -6,7 +7,16 @@ homepageURL:
   en: "https://lesk.it"
   fr: "https://lesk.it"
 licenses: 
-  - GPL-3.0
+  - 
+    URL: 
+      en: "http://lesk.it/license.html"
+      fr: "http://lesk.it/license.html"
+    spdxID: "GPL-3.0"
+  - 
+    URL: 
+      en: "http://lesk.it/license.html"
+      fr: "http://lesk.it/license.html"
+    spdxID: "Apache-2.0"
 name: 
   en: LESK
   fr: LESK
