--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Text editor and Notepad replacement that runs in the Windows environment."
   fr: "Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows."
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://notepad-plus-plus.org"
   fr: "https://notepad-plus-plus.org/fr"
 licenses: 
-  - GPL-2.0
+  - 
+    URL: 
+      en: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
+      fr: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
+    spdxID: "GPL-2.0"
 name: 
   en: Notepad++
   fr: Notepad++
