--- a/_data/logiciels_libres-open_source_software/php.yml
+++ b/_data/logiciels_libres-open_source_software/php.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "A server-side scripting language designed for web development but also used as a general-purpose programming language."
   fr: "Langage de script côté serveur conçu pour le développement Web mais également utilisé comme langage de programmation généraliste."
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://php.net"
   fr: "https://php.net"
 licenses: 
-  - "PHP-License"
+  - 
+    URL: 
+      en: "https://php.net/license/index.php"
+      fr: "https://php.net/license/index.php"
+    spdxID: "PHP-License"
 name: 
   en: "PHP"
   fr: "PHP"
