--- a/_data/logiciels_libres-open_source_software/apache.yml
+++ b/_data/logiciels_libres-open_source_software/apache.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Cross-platform web server"
   fr: "Serveur Web multiplateforme"
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://httpd.apache.org"
   fr: "https://httpd.apache.org"
 licenses: 
-  - Apache-2.0
+  - 
+    URL: 
+      en: "https://www.apache.org/licenses/LICENSE-2.0.txt"
+      fr: "https://www.apache.org/licenses/LICENSE-2.0.txt"
+    spdxID: "Apache-2.0"
 name: 
   en: Apache
   fr: Apache
