--- a/_data/logiciels_libres-open_source_software/firefox.yml
+++ b/_data/logiciels_libres-open_source_software/firefox.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Web browser developed by Mozilla Foundation"
   fr: "Navigateur Web développé par la Fondation Mozilla"
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://www.mozilla.org/en-US/firefox/"
   fr: "https://www.mozilla.org/fr/firefox/"
 licenses: 
-  - MPL-2.0
+  - 
+    URL: 
+      en: "https://www.mozilla.org/en-US/MPL/2.0/FAQ/"
+      fr: "https://www.mozilla.org/en-US/MPL/2.0/FAQ/"
+    spdxID: "MPL-2.0"
 name: 
   en: Firefox
   fr: Firefox
