--- a/_data/logiciels_libres-open_source_software/laravel.yml
+++ b/_data/logiciels_libres-open_source_software/laravel.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "PHP web framework intended for the development of web applications following the model–view–controller (MVC) architectural pattern."
   fr: "Framework Web PHP destiné au développement d'applications Web suivant le modèle architectural MVC modèle-vue-contrôleur."
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://laravel.com"
   fr: "https://laravel.com"
 licenses: 
-  - MIT
+  - 
+    URL: 
+      en: "https://github.com/laravel/framework/blob/5.8/LICENSE.md"
+      fr: "https://github.com/laravel/framework/blob/5.8/LICENSE.md"
+    spdxID: "MIT"
 name: 
   en: Laravel
   fr: Laravel
