--- a/_data/logiciels_libres-open_source_software/rocketchat.yml
+++ b/_data/logiciels_libres-open_source_software/rocketchat.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Instant messaging team chat"
   fr: "Messagerie instantanée et clavardage d'équipe"
@@ -6,7 +7,11 @@ homepageURL:
   en: "https://rocket.chat"
   fr: "https://rocket.chat"
 licenses: 
-  - MIT
+  - 
+    URL: 
+      en: "https://github.com/RocketChat/Rocket.Chat.Hubot/blob/master/LICENSE"
+      fr: "https://github.com/RocketChat/Rocket.Chat.Hubot/blob/master/LICENSE"
+    spdxID: "MIT "
 name: 
   en: "Rocket.Chat"
   fr: "Rocket.Chat"
