--- a/_data/logiciels_libres-open_source_software/elasticsearch.yml
+++ b/_data/logiciels_libres-open_source_software/elasticsearch.yml
@@ -30,7 +30,7 @@ admininstrations:
           email: "irina.krasteleva@tc.gc.ca"
         date: 
           started: ~
-          metadataLastUpdated: ~
+          metadataLastUpdated: "2019-05-06"
         name: 
           en: ~
           fr: ~
