--- a/_data/logiciels_libres-open_source_software/etherpad.yml
+++ b/_data/logiciels_libres-open_source_software/etherpad.yml
@@ -33,7 +33,7 @@ admininstrations:
           email: "mark.wooff@tbs-sct.gc.ca"
         date: 
           started: ~
-          metadataLastUpdated: ~
+          metadataLastUpdated: "2019-05-06"
         name: 
           en: "GCcollab Docs"
           fr: "Docs GCcollab"
