--- a/_data/logiciels_libres-open_source_software/jekyll.yml
+++ b/_data/logiciels_libres-open_source_software/jekyll.yml
@@ -33,7 +33,7 @@ admininstrations:
           fr: "Échange de ressources ouvert"
         date: 
           started: "2018-01-23"
-          metadataLastUpdated: ~
+          metadataLastUpdated: "2019-05-06"
         description: 
           en: "Github Pages"
           fr: "Pages Github"
