--- a/_data/logiciels_libres-open_source_software/php.yml
+++ b/_data/logiciels_libres-open_source_software/php.yml
@@ -30,7 +30,7 @@ admininstrations:
           email: sebastien.routier@international.gc.ca
         date: 
           started: ~
-          metadataLastUpdated: ~
+          metadataLastUpdated: "2019-05-06"
         name: 
           en: "Misc"
           fr: "Divers"
