--- a/_data/logiciels_libres-open_source_software/rocketchat.yml
+++ b/_data/logiciels_libres-open_source_software/rocketchat.yml
@@ -29,7 +29,7 @@ admininstrations:
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
           started: ~
-          metadataLastUpdated: ~
+          metadataLastUpdated: "2019-05-06"
         name: 
           en: "GCcollab Message"
           fr: "Message GCcollab"
@@ -44,7 +44,7 @@ admininstrations:
           email: ~
         date: 
           started: ~
-          metadataLastUpdated: ~
+          metadataLastUpdated: "2019-05-06"
         name: 
           en: ~
           fr: ~
