--- a/_data/logiciels_libres-open_source_software/accumulo.yml
+++ b/_data/logiciels_libres-open_source_software/accumulo.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Accumulo is a sorted, distributed key/value store  that provides robust, scalable data storage and retrieval."
   fr: "Accumulo est un magasin clé/valeur trié et distribué qui fournit un stockage et une récupération de données robustes et évolutifs."
