--- a/_data/logiciels_libres-open_source_software/airFlow.yml
+++ b/_data/logiciels_libres-open_source_software/airFlow.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Airflow is a platform to programmatically author, schedule and monitor workflows."
   fr: "~"
