--- a/_data/logiciels_libres-open_source_software/angular.yml
+++ b/_data/logiciels_libres-open_source_software/angular.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "A framework for mobile and desktop applications."
   fr: "Un framework pour les applications mobiles et bureaux."
