--- a/_data/code/provincial/bc.yml
+++ b/_data/code/provincial/bc.yml
@@ -35,3 +35,118 @@ releases:
       fr: 
         - "Échange de développeurs"
     vcs: git
+
+  - 
+    contact: 
+      URL: 
+        en: https://github.com/bcgov/gwells/issues
+        fr: https://github.com/bcgov/gwells/issues
+      email: todd.wilson@gov.bc.ca
+    date: 
+      created: "2015-04-29"
+      metadataLastUpdated: "2019-05-10"
+    description: 
+      en: "Groundwater Wells and Aquifers application for the Ministry of Environment."
+      fr: "Application de puits d'eau souterraine et d'aquifères pour le ministère de l'environnement."
+    homepageURL:
+      en: "https://apps.nrs.gov.bc.ca/gwells/"
+      fr: "https://apps.nrs.gov.bc.ca/gwells/"
+    languages: 
+      - JavaScript
+    name: 
+      en: gwells
+      fr: gwells
+    licenses: 
+      - 
+        URL: 
+          en: "https://github.com/bcgov/gwells/blob/release/LICENSE"
+          fr: "https://github.com/bcgov/gwells/blob/release/LICENSE"
+        spdxID: "Apache-2.0"
+    repositoryURL: 
+      en: "https://github.com/bcgov/gwells"
+      fr: "https://github.com/bcgov/gwells"
+    status: Production
+    tags: 
+      en: 
+        - "groundwater-data"
+      fr: 
+        - "données-eaux souterraines"
+    vcs: git
+    version: "1.54.0"
+
+  - 
+    contact: 
+      URL: 
+        en: https://github.com/bcgov/devhub-app-web/issues
+        fr: https://github.com/bcgov/devhub-app-web/issues
+      email: todd.wilson@gov.bc.ca
+    date: 
+      created: "2017-10-20"
+      metadataLastUpdated: "2019-05-10"
+    description: 
+      en: "Web application for the DevHub."
+      fr: "Application Web pour le DevHub."
+    homepageURL:
+      en: "https://developer.gov.bc.ca/"
+      fr: "https://developer.gov.bc.ca/"
+    languages: 
+      - JavaScript
+    name: 
+      en: devhub-app-web
+      fr: devhub-app-web
+    licenses: 
+      - 
+        URL: 
+          en: "https://github.com/bcgov/devhub-app-web/blob/master/LICENSE"
+          fr: "https://github.com/bcgov/devhub-app-web/blob/master/LICENSE"
+        spdxID: "Apache-2.0"
+    repositoryURL: 
+      en: "https://github.com/bcgov/devhub-app-web"
+      fr: "https://github.com/bcgov/devhub-app-web"
+    status: Development
+    tags: 
+      en: 
+        - "DevHub App Web"
+      fr: 
+        - "DevHub App Web"
+    vcs: git
+    version: "2.7.0"    
+
+  - 
+    contact: 
+      URL: 
+        en: https://github.com/bcgov/ckanext-bcgov/issues
+        fr: https://github.com/bcgov/ckanext-bcgov/issues
+      email: NRSApplications@gov.bc.ca
+    date: 
+      created: "2014-03-20"
+      metadataLastUpdated: "2019-05-10"
+    description: 
+      en: "BC Data Catalogue source code."
+      fr: "Code source du catalogue de données BC."
+    homepageURL:
+      en: "http://catalogue.data.gov.bc.ca"
+      fr: "http://catalogue.data.gov.bc.ca"
+    languages: 
+      -  Python 
+    name: 
+      en: ckanext-bcgov
+      fr: ckanext-bcgov
+    licenses: 
+      - 
+        URL: 
+          en: "https://github.com/bcgov/ckanext-bcgov/blob/dev/license"
+          fr: "https://github.com/bcgov/ckanext-bcgov/blob/dev/license"
+        spdxID: "AGPL-3.0"
+    repositoryURL: 
+      en: "https://github.com/bcgov/ckanext-bcgov"
+      fr: "https://github.com/bcgov/ckanext-bcgov"
+    status: Production
+    tags: 
+      en: 
+        - "Data Catalogue"
+      fr: 
+        - "Catalogue de données"
+    vcs: git
+    version: "1.7.18"
+    
